Added more stuff

--- a/client/client.html
+++ b/client/client.html
@@ -46,7 +46,7 @@
 </template>
 
 <template name="bullet">
-  <div class="bullet {{side}}" style="left: {{x}}%; top: {{y}}%"></div>
+  <div class="bullet {{type}}" style="left: {{x}}%; top: {{y}}%"></div>
 </template>
 
 
