--- a/client/client.html
+++ b/client/client.html
@@ -20,7 +20,7 @@
 <!-- Each player's ship -->
 <template name="ship">
   <div class="hud health">{{name}}: {{health}}</div>
-  <div class="ship" style="left: {{x}}%; top: {{y}}%"></div>
+  <div class="ship" style="left: {{x}}px; top: {{y}}px"></div>
 </template>
 
 
@@ -33,7 +33,7 @@
 </template>
 
 <template name="enemy_ship">
-  <div class="enemy_ship" style="left: {{x}}%; top: {{y}}%"></div>
+  <div class="enemy_ship" style="left: {{x}}px; top: {{y}}px"></div>
 </template>
 
 
@@ -46,7 +46,7 @@
 </template>
 
 <template name="bullet">
-  <div class="bullet {{type}}" style="left: {{x}}%; top: {{y}}%"></div>
+  <div class="bullet {{type}}" style="left: {{x}}px; top: {{y}}px"></div>
 </template>
 
 
