--- a/client/client.html
+++ b/client/client.html
@@ -37,7 +37,7 @@
 </template>
 
 
-<!-- ## POWERUP ELEMENTS ## ->>
+<!-- ## POWERUP ELEMENTS ## -->
 <!-- All Powerups -->
 <template name="powerups">
   {{#each powerups}}
